package jobs4u.base.entitymanagement.domain;

import eapli.framework.domain.model.ValueObject;

public class CustomerCode implements Comparable<CustomerCode>, ValueObject {
    @Override
    public int compareTo(CustomerCode o) {
        return 0;
    }
}
