package jobs4u.base.entitymanagement.dto;

public class EntityDTO {
    private String costumerCode;

    public String costumerCode(){
        return this.costumerCode;
    }
}
