package jobs4u.base.requirementsmanagement.domain;

import eapli.framework.domain.model.ValueObject;

public class RequirementDescription implements ValueObject {
}
