package jobs4u.base.requirementsmanagement.dto;

public class RequirementSpecificationDTO {

    private String filename;

    public String filename(){
        return this.filename;
    }
}
